klass-model-converters/klass-compiler/src/test/resources/errors/UnresolvedTypes.klass
package dummy

class ClassWithUnresolved
{
    unresolvedEnumerationProperty: UnresolvedEnumeration

    unresolvedParameterizedProperty(): UnresolvedClass[1..1]
    {
        this.unresolvedEnumerationProperty == UnresolvedEnumeration.unresolvedEnumerationLiteral
    }
}

association AssociationWithUnresolved
{
    parent: UnresolvedClass[0..1]
    children: UnresolvedClass[0..*]
}
